plugins {
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.5'
    id 'java'
}

group = 'quebec.salonbleu'
version = '1.0.0'

java {
    sourceCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
    implementation('org.htmlunit:htmlunit:4.1.0') {
        exclude group: 'commons-logging', module: 'commons-logging'
    }
    implementation 'org.apache.commons:commons-lang3'
    implementation 'commons-io:commons-io:2.16.1'
    implementation 'commons-codec:commons-codec'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

bootJar {
    archiveClassifier.set('boot')
}

jar {
    archiveClassifier.set('')
}

tasks.named('test') {
    useJUnitPlatform()
}
